# MagicTimeDate_android_py

./: README.md  commands.txt  main.py  pyproject.toml
maindate/: CHANGELOG  LICENSE  README.rst  pyproject.toml
maindate/src/maindate/: __main__.py  app.py
maindate/src/maindate/script/: magic_time_script.py  maindate_script.py  nums_time_script.py
