[tool.poetry]
name = "maindate-android"
version = "0.1.0"
description = ""
authors = ["DzmitrySha <ravenbydev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
briefcase = "^0.3.16"
rubicon-objc = "^0.4.7"
toga = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
